# andrews-chess-engine

./: .gitignore  Cargo.toml  package.json
.github/: dependabot.yml
src/: lib.rs  main.rs
src/board/: constants.rs  fen_util.rs  mod.rs  types.rs
src/engine/: generate.rs  mod.rs  types.rs
www/: .eslintrc.js  .eslintrc.yml  LICENSE  index.html  index.js  package-lock.json  package.json  style.css  wasm_build.sh  webpack.common.js  webpack.config.js
www/src/: bootstrap.js  index.html  index.js  style.css
