[package]
name = "andrews_chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version  = "0.2.63", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["console"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.3.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
log = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
env_logger = "0.10.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
